create tab trap, improve standalone widget

--- a/src/slides/index.mdx
+++ b/src/slides/index.mdx
@@ -191,7 +191,11 @@ people with disabilities<br />encounter on a regular basis
 
 ## Demo
 
-<SearchContainer />
+<div class="search-demo" style="font-size: 0.65em;">
+  
+  <SearchContainer />
+
+</div>
 
 </Slide>
 
