slide changes for the day before Clarity Conf

--- a/src/slides/index.mdx
+++ b/src/slides/index.mdx
@@ -46,6 +46,22 @@ const buttonAction = () => {
 
 ## By Marcy Sutton
 
+Head of Learning, Gatsby
+
+</Slide>
+
+---
+
+<Slide>
+
+<div style="transform: scale(0.65, 0.65)">
+
+![Gatsby logo](./gatsby-icon.png)
+
+</div>
+
+Gatsby is a framework for building websites & component libraries with React.js
+
 </Slide>
 
 ---
@@ -58,6 +74,16 @@ Making the web more inclusive <br />
 **_with_** _and_ **_for_ people with disabilities**
 
 http://bit.ly/microsoft-inclusive-toolkit
+
+</Slide>
+
+---
+
+<Slide>
+
+# Accessibility in JavaScript Applications and on the Web
+
+<span style="display: block; margin: 1em 0; transform: scale(2, 2);" role="img" title="Thinking face">🤔</span>
 
 </Slide>
 
@@ -132,16 +158,6 @@ http://bit.ly/microsoft-inclusive-toolkit
 
 <Slide>
 
-# Components
-
-“A part or element of a larger whole,<br />especially a part of a machine or vehicle”
-
-</Slide>
-
----
-
-<Slide>
-
 # UI Components
 
 “Components let you split the UI into independent, reusable pieces, and think about each piece in isolation” - [React docs](https://facebook.github.io/react/docs/components-and-props.html)
@@ -203,7 +219,7 @@ people with disabilities<br />encounter on a regular basis
 <AvoidTheMouse>
 
   <UserPopover />
-  
+
 </AvoidTheMouse>
 
 </div>
@@ -261,6 +277,7 @@ people with disabilities<br />encounter on a regular basis
 - Motion doesn’t cause harm 
 - Everyone knows what icons mean
 - Content doesn’t need alternatives
+- People fit neatly into boxes
 
 </Slide>
 
@@ -297,6 +314,28 @@ people with disabilities<br />encounter on a regular basis
 - No captions or alt. descriptions
 
 </div>
+
+</Slide>
+
+---
+
+<Slide>
+
+# ARIA Authoring Practices Guide
+
+A starting point for interactions and semantics
+
+http://w3c.github.io/aria-practices/
+
+</Slide>
+
+---
+
+<Slide>
+
+# Making your (Gatsby)<br />site accessible
+
+https://www.gatsbyjs.org/docs/making-your-site-accessible
 
 </Slide>
 
