update dumpster icon with a custom one

--- a/src/slides/index.mdx
+++ b/src/slides/index.mdx
@@ -24,8 +24,8 @@ const openModal = () => {
   <img src="./garbage-pail-components.svg" alt="Garbage Pail Components" />
 </h1>
 
-<div style="margin-bottom:2em; position: relative;">
-<img alt="a dumpster fire" src="./dumpster-fire.gif" style="display: inline-block; margin-left: -4%; margin-top: -6%;  position: absolute; transform: scale(2);" />
+<div style="position: relative;">
+<img alt="a dumpster fire" src="./dumpster-fire.svg" style="display: inline-block; max-width: 200px; margin-top: -1.5em; " />
 </div>
 
 ## By Marcy Sutton
