update for Gatsby Days

--- a/src/slides/index.mdx
+++ b/src/slides/index.mdx
@@ -55,6 +55,8 @@ http://bit.ly/microsoft-inclusive-toolkit
 
 <span style="display: block; margin: 1em 0; transform: scale(2, 2);" role="img" title="Thinking face">🤔</span>
 
+<a href="https://frontendmasters.com/workshops/javascript-accessibility/">https://frontendmasters.com/workshops/<br />javascript-accessibility</a>
+
 </Slide>
 
 ---
@@ -376,22 +378,10 @@ https://www.gatsbyjs.org/docs/making-your-site-accessible
 
 <Slide>
 
-You know who explains this well?
-
-# Tatiana T. Mac
-
-[System of Systems](https://www.clarityconf.com/session/system-of-systems)<br />
-Clarity Conf, August 21<sup>st</sup> 2:30pm
-
-</Slide>
-
----
-
-<Slide>
-
 # For more accessibility info
 
-https://marcysutton.com/web-accessibility-resources
+- https://marcysutton.com/web-accessibility-resources
+- https://webaim.org/projects/screenreadersurvey8/
 
 </Slide>
 
@@ -409,7 +399,7 @@ https://marcysutton.com/web-accessibility-resources
 
 <div>
 
-# Thanks, Clarity!
+<h1>Thanks,<br />Gatsby Days!</h1>
 
 twitter: [@marcysutton](https://twitter.com/marcysutton)<br />
 github: [@marcysutton](https://github.com/marcysutton)<br />
