--- a/src/slides/index.mdx
+++ b/src/slides/index.mdx
@@ -369,7 +369,7 @@ https://www.gatsbyjs.org/docs/making-your-site-accessible
 - [Access Works](https://access-works.com) (Knowbility)
 
 <div style="margin-top: 2em; font-style: italic;">
-  <small>October 10: <a href="https://inclusivedesign24.org/2019/">Inclusve Design 24</a></small>
+  <small>October 10: <a href="https://inclusivedesign24.org/2019/">Inclusive Design 24</a></small>
 </div>
 
 </Slide>
