add shallow DOM intro, Slides on GitHub

--- a/src/slides/index.mdx
+++ b/src/slides/index.mdx
@@ -77,6 +77,21 @@ Gatsby is a framework for building websites & component libraries with React.js
 
 <Slide>
 
+<p>
+  <span class="githubIcon"></span>&nbsp;
+  <strong><a href="https://github.com/marcysutton/garbage-pail-components">
+    http://github.com/marcysutton/garbage-pail-components
+  </a></strong>
+  <br />Gatsby,&nbsp;  
+  <a href="https://github.com/jxnblk/mdx-deck/tree/master/packages/gatsby-theme">MDX-Deck</a> theme
+</p>
+
+</Slide>
+
+---
+
+<Slide>
+
 # The WebAIM Million
 https://webaim.org/projects/million/
 
@@ -290,7 +305,17 @@ Components bake in our assumptions about design and development, often embedding
 
 <Slide>
 
-# Don’t assume
+<h1 class="visually-hidden">Shallow Dom</h1>
+
+![Garbage Pail Components with a boy flattened in the street](./shallow-dom.png)
+
+</Slide>
+
+---
+
+<Slide>
+
+# Don’t assume:
 
 - Users have perfect vision
 - It’s okay to require a mouse
