WIP updates for smashing, incl. broken d3 example

--- a/src/slides/index.mdx
+++ b/src/slides/index.mdx
@@ -11,6 +11,8 @@ import UserPopover from "../components/user-popover"
 import KeyboardTrapDemo from "../components/demo1"
 import CarouselDemo from "../components/demo2"
 import DialogTabceptionDemo from "../components/dialog-tabception"
+import CanvasDemo from "../components/canvas"
+import DataViz from "../components/dataviz"
 
 import baseTheme from '../theme'
 export const themes = [baseTheme, highlight]
@@ -315,6 +317,64 @@ Components bake in our assumptions about design and development, often embedding
 
 <Slide>
 
+<h1 class="visually-hidden">HTML5 Canvas</h1>
+
+<CanvasDemo />
+
+</Slide>
+
+---
+
+<Slide>
+
+<h1 class="visually-hidden">HTML5 Canvas with fallback text</h1>
+
+<CanvasDemo showFallback="true" />
+
+</Slide>
+
+---
+
+<Slide>
+
+![Canvas Best Practices](./canvas-best-practices.png)
+
+<p class="visually-hidden">https://html.spec.whatwg.org/multipage/canvas.html#best-practices</p>
+
+</Slide>
+
+---
+
+<Slide>
+
+<h1 class="visually-hidden">Flipboard mobile web with HTML5 canvas</h1>
+
+![Flipboard: 60 FPS on the Mobile web post from February 2015](./flipboard-60fps.jpg)
+
+</Slide>
+
+---
+
+<Slide>
+
+<h1 class="visually-hidden">React Canvas</h1>
+
+![React-Canvas on GitHub](./react-canvas.png)
+
+</Slide>
+
+---
+
+<Slide>
+
+<DataViz />
+
+</Slide>
+
+---
+
+<Slide>
+
 # Don’t assume:
 
 - Users have perfect vision
@@ -394,7 +454,7 @@ https://www.gatsbyjs.org/docs/making-your-site-accessible
 - [Access Works](https://access-works.com) (Knowbility)
 
 <div style="margin-top: 2em; font-style: italic;">
-  <small>October 10: <a href="https://inclusivedesign24.org/2019/">Inclusive Design 24</a></small>
+  <small><a href="https://www.youtube.com/watch?v=Tr21FqQQv-U">Inclusive Design 24 Talk</a></small>
 </div>
 
 </Slide>
@@ -424,7 +484,7 @@ https://www.gatsbyjs.org/docs/making-your-site-accessible
 
 <div>
 
-<h1>Thanks,<br />Gatsby Days!</h1>
+<h1>Thanks,<br />Smashing Conf!</h1>
 
 twitter: [@marcysutton](https://twitter.com/marcysutton)<br />
 github: [@marcysutton](https://github.com/marcysutton)<br />
