add link to d3 source

--- a/src/slides/index.mdx
+++ b/src/slides/index.mdx
@@ -369,6 +369,12 @@ Components bake in our assumptions about design and development, often embedding
 
 <DataViz />
 
+<p>
+<a href="https://bocoup.com/blog/smoothly-animate-thousands-of-points-with-html5-canvas-and-d3">
+Source: Bocoup
+</a>
+</p>
+
 </Slide>
 
 ---
