update ending section demo/add image

--- a/src/slides/index.mdx
+++ b/src/slides/index.mdx
@@ -483,8 +483,17 @@ Source: Bocoup
 
 - There might be a simpler solution than 1:1 UX
 - Use meaningful text alternatives
-- Visually hidden tables
+- [Reduce motion](https://developer.mozilla.org/en-US/docs/Web/CSS/@media/prefers-reduced-motion) if requested
+- [Visually hidden](https://a11yproject.com/posts/how-to-hide-content/) tables can work
 - Accessible toggles between data formats
+
+</Slide>
+
+---
+
+<Slide>
+
+<img src="/garbage-iceberg.jpg" alt="Tip of the garbage iceberg" />
 
 </Slide>
 
