add slides on canvas a11y

--- a/src/slides/index.mdx
+++ b/src/slides/index.mdx
@@ -454,9 +454,29 @@ https://www.w3.org/WAI/tutorials/carousels/
 
 <Slide>
 
+<h1 class="visually-hidden">Flipboard accessibility</h1>
+
+![Flipboard: accessibility needs further exploration](./flipboard-accessibility.png)
+
+</Slide>
+
+---
+
+<Slide>
+
 <h1 class="visually-hidden">React Canvas</h1>
 
 ![React-Canvas on GitHub](./react-canvas.png)
+
+</Slide>
+
+---
+
+<Slide>
+
+> The `<canvas>` element is a bitmap and does not provide information about any drawn objects. Content is not exposed to accessibility tools like semantic HTML is. In general, **avoid canvas in a website or app**.
+
+<small><a href="https://developer.mozilla.org/en-US/docs/Web/API/Canvas_API/Tutorial/Hit_regions_and_accessibility">https://developer.mozilla.org/en-US/docs/Web/API/<br />Canvas_API/Tutorial/Hit_regions_and_accessibility</a></small>
 
 </Slide>
 
