add emphasis, gatsbyjs account

--- a/src/slides/index.mdx
+++ b/src/slides/index.mdx
@@ -474,7 +474,7 @@ https://www.w3.org/WAI/tutorials/carousels/
 
 <Slide>
 
-> The `<canvas>` element is a bitmap and does not provide information about any drawn objects. Content is not exposed to accessibility tools like semantic HTML is. In general, **avoid canvas in a website or app**.
+> The `<canvas>` element is a bitmap and does not provide information about any drawn objects. Content is not exposed to accessibility tools like semantic HTML is. In general, _avoid canvas in a website or app_.
 
 <small><a href="https://developer.mozilla.org/en-US/docs/Web/API/Canvas_API/Tutorial/Hit_regions_and_accessibility">https://developer.mozilla.org/en-US/docs/Web/API/<br />Canvas_API/Tutorial/Hit_regions_and_accessibility</a></small>
 
@@ -623,6 +623,7 @@ https://www.gatsbyjs.org/docs/making-your-site-accessible
 <h1>Thanks,<br />Smashing Conf!</h1>
 
 twitter: [@marcysutton](https://twitter.com/marcysutton)<br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;[@gatsbyjs](https://twitter.com/gatsbyjs)<br />
 github: [@marcysutton](https://github.com/marcysutton)<br />
 instagram: [@marcysutton](https://instagram.com/marcysutton)
 
