improve display on small screens

--- a/src/slides/index.mdx
+++ b/src/slides/index.mdx
@@ -233,7 +233,7 @@ Components bake in our assumptions about design and development, often embedding
 
 <h2 class="visually-hidden">Demo: a dropdown that avoids the mouse</h2>
 
-<div style="font-size: 1em;">
+<div class="popover-demo-wrap">
 
 <AvoidTheMouse>
 
@@ -274,7 +274,7 @@ Components bake in our assumptions about design and development, often embedding
 
 <Slide>
 
-<img src="/no-mouse.png" alt="a crossed-out mouse target" style="margin-top:-2em; max-width:30vh" />
+<img src="/no-mouse.png" alt="a crossed-out mouse target" style="max-width:30vh" />
 
 <CodeBlock>
 
@@ -610,9 +610,9 @@ https://www.gatsbyjs.org/docs/making-your-site-accessible
 
 <Slide>
 
-<div style="display: flex; align-items: center;">
+<div class="image-text-layout">
 
-<div style="margin-right: 1em;">
+<div class="image">
 
 ![the end](./disk-barf-the-end.jpg)
 
