update for A11yTO

--- a/src/slides/index.mdx
+++ b/src/slides/index.mdx
@@ -57,8 +57,8 @@ https://www.w3.org/WAI/
 
 <span style="display: block; margin: 1em 0; transform: scale(2, 2);" role="img" title="Thinking face">🤔</span>
 
-<a href="https://shop.smashingmagazine.com/products/smashing-book-6-new-frontiers-in-web-design">
-https://shop.smashingmagazine.com/products/<br />smashing-book-6-new-frontiers-in-web-design
+<a href="https://frontendmasters.com/workshops/javascript-accessibility/">
+https://frontendmasters.com/<br />workshops/javascript-accessibility
 </a>
 
 </Slide>
@@ -620,7 +620,7 @@ https://www.gatsbyjs.org/docs/making-your-site-accessible
 
 <div>
 
-<h1>Thanks,<br />Smashing Conf!</h1>
+<h1>Thanks,<br />A11yTO!</h1>
 
 twitter: [@marcysutton](https://twitter.com/marcysutton)<br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;[@gatsbyjs](https://twitter.com/gatsbyjs)<br />
