slide updates for A11yTO

--- a/src/slides/index.mdx
+++ b/src/slides/index.mdx
@@ -81,22 +81,6 @@ Gatsby is a framework for building websites & component libraries with React.js
 
 <Slide>
 
-<p>
-  <span class="githubIcon"></span>&nbsp;
-  <strong><a href="https://github.com/marcysutton/garbage-pail-components">
-    https://github.com/marcysutton/<br />garbage-pail-components
-  </a></strong>
-</p>
-<p>Gatsby,&nbsp;  
-  <a href="https://github.com/jxnblk/mdx-deck/tree/master/packages/gatsby-theme">MDX-Deck</a> theme
-</p>
-
-</Slide>
-
----
-
-<Slide>
-
 # The WebAIM Million
 https://webaim.org/projects/million/
 
@@ -560,23 +544,19 @@ Source: Bocoup
 
 ---
 
-<Slide>
+<h1 class="visually-hidden">Speaking of assumptions...</h1>
 
-# ARIA Authoring Practices Guide
-
-A starting point for interactions and semantics
-
-http://w3c.github.io/aria-practices/
-
-</Slide>
+<a href="https://www.gatsbyjs.org/blog/2019-07-11-user-testing-accessible-client-routing/" title="Go to gatsbyjs.org">
+  <img src="/user-testing-fable.jpg" alt="User testing blog post on gatsbyjs.org" />
+</a>
 
 ---
 
 <Slide>
 
-# Making your (Gatsby)<br />site accessible
+# Make your Gatsby<br />site accessible
 
-https://www.gatsbyjs.org/docs/making-your-site-accessible
+<a href="https://www.gatsbyjs.org/docs/making-your-site-accessible">https://www.gatsbyjs.org/docs/<br />making-your-site-accessible</a>
 
 </Slide>
 
@@ -592,6 +572,18 @@ https://www.gatsbyjs.org/docs/making-your-site-accessible
 <div style="margin-top: 2em; font-style: italic;">
   <small><a href="https://www.youtube.com/watch?v=Tr21FqQQv-U">Inclusive Design 24 Talk</a></small>
 </div>
+
+</Slide>
+
+---
+
+<Slide>
+
+# ARIA Authoring Practices Guide
+
+A starting point for interactions and semantics
+
+http://w3c.github.io/aria-practices/
 
 </Slide>
 
@@ -620,12 +612,11 @@ https://www.gatsbyjs.org/docs/making-your-site-accessible
 
 <div>
 
-<h1>Thanks,<br />A11yTO!</h1>
+<h1>Thank you!</h1>
 
 twitter: [@marcysutton](https://twitter.com/marcysutton)<br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;[@gatsbyjs](https://twitter.com/gatsbyjs)<br />
-github: [@marcysutton](https://github.com/marcysutton)<br />
-instagram: [@marcysutton](https://instagram.com/marcysutton)
+github: [@marcysutton](https://github.com/marcysutton)
 
 </div>
 
