fix image paths

--- a/src/slides/index.mdx
+++ b/src/slides/index.mdx
@@ -258,7 +258,7 @@ Components bake in our assumptions about design and development, often embedding
 
 <Slide>
 
-<img src="/no-mouse.png" alt="a crossed-out mouse target" style="max-width:30vh" />
+<img src="./no-mouse.png" alt="a crossed-out mouse target" style="max-width:30vh" />
 
 <CodeBlock>
 
@@ -497,7 +497,7 @@ Source: Bocoup
 
 <Slide>
 
-<img src="/garbage-iceberg.jpg" alt="Tip of the garbage iceberg" />
+<img src="./garbage-iceberg.jpg" alt="Tip of the garbage iceberg" />
 
 </Slide>
 
@@ -547,7 +547,7 @@ Source: Bocoup
 <h1 class="visually-hidden">Speaking of assumptions...</h1>
 
 <a href="https://www.gatsbyjs.org/blog/2019-07-11-user-testing-accessible-client-routing/" title="Go to gatsbyjs.org">
-  <img src="/user-testing-fable.jpg" alt="User testing blog post on gatsbyjs.org" />
+  <img src="./user-testing-fable.jpg" alt="User testing blog post on gatsbyjs.org" />
 </a>
 
 ---
