update for A11yTO

--- a/src/slides/index.mdx
+++ b/src/slides/index.mdx
@@ -40,6 +40,18 @@ Head of Learning, Gatsby
 
 <Slide>
 
+# Slides
+
+<a href="https://marcysutton.github.io/garbage-pail-components">
+  https://marcysutton.github.io/<br />garbage-pail-components
+</a>
+
+</Slide>
+
+---
+
+<Slide>
+
 # Accessibility
 
 Making the web more inclusive <br />
